Fix layout bugs

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -57,7 +57,7 @@ pre {
 }
 
 #gem-list-box .list-box-content {
-    height: calc(100% - 23px);
+    height: calc(100% - 19px);
 }
 
 .list-box-content {
@@ -137,6 +137,7 @@ pre {
     border-right: 1px solid #e5e5e5;
     background-color: #f0eaff;
     color: #5830bb;
+    box-shadow: inset -2px -2px 2px rgba(0, 0, 0, 0.16);
 }
 
 .icon {
